--- a/PaintSharing/Base.lproj/Main.storyboard
+++ b/PaintSharing/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="g7e-7O-pvm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="g7e-7O-pvm">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -42,14 +42,16 @@
                             <outlet property="delegate" destination="WcK-G2-qte" id="JB8-lr-HjB"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="QSI-PV-dqW">
-                        <barButtonItem key="rightBarButtonItem" title="New" id="oXK-bK-TmW">
+                        <barButtonItem key="leftBarButtonItem" title="New" id="oXK-bK-TmW">
                             <connections>
                                 <segue destination="tNz-Vv-Kaf" kind="push" id="6Hu-jc-hsC"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kJP-PB-HkE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
